<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:background="@color/colarUn"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currconverter"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/mainimg"
        android:layout_gravity="center"
        app:srcCompat="@drawable/money"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="17dp" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:columnCount="2">

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mainbtn1"
    android:ems="10"
    android:layout_margin="6dp"
    android:id="@+id/btnDtoR"
    />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainbtn2"
            android:ems="10"
            android:layout_margin="6dp"
            android:id="@+id/btnPtoR"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainbtn3"
            android:ems="10"
            android:layout_margin="6dp"
            android:id="@+id/btnEtoR"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainbtn4"
            android:ems="10"
            android:layout_margin="6dp"
            android:id="@+id/btnYtoR"
            />
    </GridLayout>
</LinearLayout>